test/classes/vass/ref-like-intents/inout-superclass.good
inout-superclass.chpl:13: error: unresolved call 'procInoutD(unmanaged C)'
inout-superclass.chpl:6: note: this candidate did not match: procInoutD(inout arg: unmanaged D)
inout-superclass.chpl:13: note: because call actual argument #1 with type unmanaged C
inout-superclass.chpl:6: note: is passed to formal 'inout arg: unmanaged D'
